--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "udacity-c2-image-filter",
+  "name": "image-filter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/grutt/udacity-c2-image-filter.git"
+    "url": "https://github.com/dnjoe96/Image-filter"
   },
   "author": "",
   "license": "ISC",
